# trails

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/scripts/: generate_narrative.py  import_readwise.py
backend/src/: app.py  narrative.py  prompts.py  schemas.py  utils.py
backend/src/file_handlers/: __init__.py  kindle.py  readwise.py
commonplace-frontend/: package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/: fonts.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/moments/: page.tsx
frontend/src/app/moments/[id]/: AnnotationPanel.tsx  Content.tsx  page.tsx
frontend/src/app/moments/lib/: getTrailData.tsx
frontend/src/app/trails/: page.tsx
frontend/src/app/trails/[id]/: AnnotationPanel.tsx  Content.tsx  page.tsx
frontend/src/app/trails/lib/: getTrailData.tsx
frontend/src/components/: DataGrid.tsx  DataPanel.tsx  InteractiveText.tsx  Trail.tsx  fileImport.tsx
frontend/src/lib/: fetchData.ts  getTrailData.tsx  types.ts  utils.ts
